--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "imagemin-pngquant": "^8.0.0",
     "minimist": "^1.2.0",
     "prettier": "^1.18.2",
+    "tslib": "^1.10.0",
     "typescript": "^3.5.3",
     "uglify-es": "^3.3.9"
   },
