--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "importHelpers": true,
     "esModuleInterop": true,
     "strictNullChecks": true,
     "noImplicitAny": false,
