delete prize wheel

--- a/src/app.json
+++ b/src/app.json
@@ -2,8 +2,7 @@
   "pages":[
     "pages/dashboard/index",
     "pages/popup/index",
-    "pages/prizewheel/index",
-    "pages/home/index"
+    "pages/recycle-view/index"
   ],
   "window":{
     "backgroundTextStyle":"light",
