--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "uglify-es": "^3.3.9"
   },
   "dependencies": {
-    "async-validator": "^3.0.3"
+    "async-validator": "^3.0.3",
+    "miniprogram-recycle-view": "^0.1.5"
   }
 }
