validator 异步实现改为使用中间件方式

--- a/src/app.json
+++ b/src/app.json
@@ -1,8 +1,7 @@
 {
   "pages":[
     "pages/dashboard/index",
-    "pages/popup/index",
-    "pages/recycle-view/index"
+    "pages/popup/index"
   ],
   "window":{
     "backgroundTextStyle":"light",
