--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
     "uglify-es": "^3.3.9"
   },
   "dependencies": {
-    "async-validator": "^3.0.3",
-    "miniprogram-recycle-view": "^0.1.5"
+    "fecha": "^3.0.3",
+    "miniprogram-recycle-view": "^0.1.5",
+    "query-string": "^6.9.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   }
 }
