add component transition

--- a/src/app.json
+++ b/src/app.json
@@ -1,7 +1,8 @@
 {
   "pages":[
     "pages/dashboard/index",
-    "pages/popup/index"
+    "pages/popup/index",
+    "pages/transition/index"
   ],
   "window":{
     "backgroundTextStyle":"light",
