add component cell

--- a/src/app.json
+++ b/src/app.json
@@ -10,7 +10,8 @@
     "pages/parabola/index",
     "pages/switch/index",
     "pages/sticky/index",
-    "pages/dialog/index"
+    "pages/dialog/index",
+    "pages/cell/index"
   ],
   "window":{
     "backgroundTextStyle":"light",
