心累呀，data居然不支持传正则

--- a/src/app.json
+++ b/src/app.json
@@ -12,7 +12,8 @@
     "pages/sticky/index",
     "pages/dialog/index",
     "pages/cell/index",
-    "pages/tabs/index"
+    "pages/tabs/index",
+    "pages/form/index"
   ],
   "window":{
     "backgroundTextStyle":"light",
