--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "uglify-es": "^3.3.9"
   },
   "dependencies": {
+    "lodash.set": "^4.3.2",
     "miniprogram-recycle-view": "^0.1.5",
     "query-string": "^6.9.0",
     "redux": "^4.0.4",
