add component alphabeta-list

--- a/src/app.json
+++ b/src/app.json
@@ -14,7 +14,8 @@
     "pages/cell/index",
     "pages/tabs/index",
     "pages/form/index",
-    "pages/virtual-list/index"
+    "pages/virtual-list/index",
+    "pages/alphabeta-list/index"
   ],
   "window":{
     "backgroundTextStyle":"light",
